# BetterSTLSourceCodeNote

./: CMakeLists.txt  runSTL.sh
0_SGI_STL_Source_code/: alloc.h  bvector.h  char_traits.h  concept_checks.h  container_concepts.h  defalloc.h  deque.h  hash_map.h  hash_set.h  iterator.h  map.h  multimap.h  multiset.h  pthread_alloc.h  ropeimpl.h  sequence_concepts.h  set.h  stl_algo.h  stl_algobase.h  stl_alloc.h  stl_bvector.h  stl_config.h  stl_construct.h  stl_ctraits_fns.h  stl_deque.h  stl_exception.h  stl_function.h  stl_hash_fun.h  stl_hash_map.h  stl_hash_set.h  stl_hashtable.h  stl_heap.h  stl_iterator_base.h  stl_list.h  stl_map.h  stl_multimap.h  stl_multiset.h  stl_numeric.h  stl_queue.h  stl_range_errors.h  (+15 more)
1_STL_introduction/: 1_9_1_config-null-template-arguments.cpp  1_9_1_config-template-exp-special.cpp  1_9_1_config10.cpp  1_9_1_config11.cpp  1_9_1_config3.cpp  1_9_1_config5.cpp  1_9_1_config6.cpp  1_9_1_config8.cpp  1_9_2_config-temporary-object.cpp  1_9_3_config-inclass-init.cpp  1_9_4_config-operator-overloading.cpp  1_9_5_config-open-ended.cpp  1_9_6_functor.cpp  1_9_6_qsort.cpp  CMakeLists.txt
2_STL_allocator/: 2_1_1_jjalloc.cpp  2_1_1_jjalloc.h  2_2_1_defalloc.h  2_2_3_stl_construct.h  2_2_4_stl_alloc.h  2_3_1_stl_uninitialized.h  CMakeLists.txt
3_STL_iterator/: 3_1_find.cpp  3_2_algorithm.h  3_2_autoptr.cpp  3_2_mylist-iter-test.cpp  3_2_mylist-iter.h  3_2_mylist.h  3_3_stl_iterator.h  3_3_stl_iterator_base.h  3_3_tag-test.cpp
4_STL_sequence_container/: 4_2_2_stl_vector.h  4_2_5_vector-test.cpp  4_3_3_stl_list.h  4_3_5_list-test.cpp  (+11 more)
(+37 files in other folders)
